k8s/manifests/deployement.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-devops
  labels:
    app: go-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-devops
  template:
    metadata:
      labels:
        app: go-devops
    spec:
      containers:
      - name: go-devops
        image: amit2210/go-devops:v1
        ports:
        - containerPort: 8080
